--- a/app/src/main/res/layout/fragment_create_password.xml
+++ b/app/src/main/res/layout/fragment_create_password.xml
@@ -135,6 +135,19 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputPasswordRepeat"
+        app:layout_constraintBottom_toTopOf="@id/createPassword"
+        android:indeterminateTint="#FB893D"
+        style="@style/NoActionBar"
+        />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/createPassword"
