--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -77,11 +77,24 @@
         android:layout_marginBottom="72dp"
         android:background="@drawable/button"
         app:layout_constraintTop_toBottomOf="@id/inputEmail"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="84dp"
         android:text="Send OTP"
         android:textAllCaps="false"
         android:textSize="16dp"
-        android:textColor="@color/white"
+        android:textColor="@drawable/button_text_color"
+        />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputEmail"
+        app:layout_constraintBottom_toTopOf="@id/sendOTP"
+        android:indeterminateTint="#FB893D"
+        style="@style/NoActionBar"
         />
 
     <TextView
