--- a/app/src/main/res/layout/fragment_flat_info2.xml
+++ b/app/src/main/res/layout/fragment_flat_info2.xml
@@ -155,6 +155,23 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/min" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/ok"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button"
+            android:fontFamily="@font/product_sans_regular"
+            android:text="OK"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:layout_constraintLeft_toRightOf="@id/input_capacity"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/input_capacity"
+            app:layout_constraintTop_toTopOf="@+id/input_capacity" />
+
         <TextView
             android:id="@+id/occupied"
             android:layout_width="wrap_content"
@@ -207,12 +224,25 @@
             app:tickColorActive="@color/black"
             app:trackColor = "#FB893D" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/occupiedSlider"
+            app:layout_constraintBottom_toTopOf="@id/next"
+            android:indeterminateTint="#FB893D"
+            style="@style/NoActionBar"
+            />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="85dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="72dp"
             android:background="@drawable/button"
