--- a/app/src/main/res/layout/fragment_academic_details.xml
+++ b/app/src/main/res/layout/fragment_academic_details.xml
@@ -48,7 +48,7 @@
         android:spinnerMode="dropdown"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:paddingLeft="3dp"
+        android:paddingLeft="8dp"
         android:popupBackground="@drawable/spinner_bg"
         android:dropDownWidth="match_parent"
         />
@@ -74,6 +74,20 @@
         android:popupBackground="@drawable/spinner_bg"
         />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/branchSpinner"
+        app:layout_constraintBottom_toTopOf="@id/next"
+        android:indeterminateTint="#FB893D"
+        android:layout_marginTop="20dp"
+        style="@style/NoActionBar"
+        />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/next"
@@ -89,7 +103,7 @@
         android:text="Next"
         android:textAllCaps="false"
         android:textSize="16dp"
-        android:textColor="@color/white"
+        android:textColor="@drawable/button_text_color"
         android:fontFamily="@font/product_sans_regular"
         />
 
