--- a/app/src/main/res/layout/fragment_d_o_b.xml
+++ b/app/src/main/res/layout/fragment_d_o_b.xml
@@ -130,6 +130,20 @@
         android:textColor="#B2000000"
         />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mm"
+        app:layout_constraintBottom_toTopOf="@id/next"
+        android:indeterminateTint="#FB893D"
+        android:layout_marginTop="20dp"
+        style="@style/NoActionBar"
+        />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/next"
             android:layout_width="match_parent"
@@ -140,7 +154,7 @@
             android:background="@drawable/button"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="91dp"
+            android:layout_marginTop="140dp"
             android:text="Next"
             android:textAllCaps="false"
             android:textSize="16dp"
