--- a/app/src/main/res/layout/fragment_flat.xml
+++ b/app/src/main/res/layout/fragment_flat.xml
@@ -73,6 +73,19 @@
         android:textColor="@drawable/button_text_color_2"
         />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/NoButton"
+        app:layout_constraintBottom_toTopOf="@id/next"
+        android:indeterminateTint="#FB893D"
+        android:visibility="gone"
+        style="@style/NoActionBar"
+        />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/next"
         android:fontFamily="@font/product_sans_regular"
@@ -84,7 +97,7 @@
         android:background="@drawable/button"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="84dp"
         android:text="Next"
         android:textAllCaps="false"
         android:textSize="16dp"
