--- a/app/src/main/res/layout/fragment_flat_info.xml
+++ b/app/src/main/res/layout/fragment_flat_info.xml
@@ -239,6 +239,19 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/monthlyAmount"/>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/input_monthlyAmount"
+            app:layout_constraintBottom_toTopOf="@id/next"
+            android:indeterminateTint="#FB893D"
+            style="@style/NoActionBar"
+            />
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/next"
@@ -248,7 +261,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_monthlyAmount"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="80dp"
             android:background="@drawable/button"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
