--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -63,6 +63,19 @@
         android:layout_marginTop="16dp"
         android:textColor="#B2000000"
         />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputName"
+        app:layout_constraintBottom_toTopOf="@id/next"
+        android:indeterminateTint="#FB893D"
+        android:layout_marginTop="30dp"
+        style="@style/NoActionBar"
+        />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/next"
         android:layout_width="match_parent"
@@ -70,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="156dp"
         android:background="@drawable/button"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
