--- a/app/src/main/res/layout/spinner_style.xml
+++ b/app/src/main/res/layout/spinner_style.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="16sp"
-    android:fontFamily="@font/product_sans_bold"
+    android:fontFamily="@font/product_sans_regular"
     android:textColor="#000000" />
