Flat Card implemented(Some exception in Adaptor) separate Viewmodel of home fragment some changes in home,FlatCard fragments

--- a/app/src/main/res/layout/flat_card.xml
+++ b/app/src/main/res/layout/flat_card.xml
@@ -3,238 +3,253 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <FrameLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <TextView
-            android:id="@+id/AddressLine1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="11dp"
-            android:layout_marginTop="19dp"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_bold"
-            android:text="Vasundhara, Ghaziabad"
-            android:textColor="@color/white"
-            android:textSize="12dp" />
-        <TextView
-            android:id="@+id/AddressLine2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10dp"
-            android:text="364, Sector 11"
-            android:textColor="@color/white"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_marginTop="36dp"
-            android:layout_marginLeft="11dp"
-            />
-
-        <TextView
-            android:id="@+id/rent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="21000/mon"
-            android:textColor="@color/white"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="11dp"
-            />
-
-        <TextView
-            android:id="@+id/flatSize"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3BHK"
-            android:textSize="10dp"
-            android:textColor="@color/white"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_marginTop="53dp"
-            android:layout_marginLeft="91dp"
-            />
-
-
-        <TextView
-            android:id="@+id/occupied"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3/4 occupied"
-            android:textSize="12dp"
-            android:textColor="@color/white"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_marginTop="67dp"
-            android:layout_marginLeft="11dp"
-            />
-
-        <TextView
-            android:id="@+id/ownerName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:text="Ayush Agrawal"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_bold"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="63dp"
-            android:layout_marginLeft="8dp"
-            />
-
-        <TextView
-            android:id="@+id/btech"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:text="B.Tech"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="44dp"
-            android:layout_marginLeft="8dp"
-            />
-        <TextView
-            android:id="@+id/year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:text="1st yr"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="44dp"
-            android:layout_marginLeft="55dp"
-            />
-
-        <TextView
-            android:id="@+id/branch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:text="CSE"
-            android:elevation="2dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="44dp"
-            android:layout_marginLeft="94dp"
-            />
-
-        <ImageView
-            android:id="@+id/smoke_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/smoke_logo"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="23dp"
-            android:elevation="2dp"
-            android:layout_marginLeft="8dp"
-            />
-        <ImageView
-            android:id="@+id/drink_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/drink_logo"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="23dp"
-            android:elevation="2dp"
-            android:layout_marginLeft="26dp"
-            />
-        <ImageView
-            android:id="@+id/gym_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/gym_logo"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="23dp"
-            android:elevation="2dp"
-            android:layout_marginLeft="44dp"
-            />
-        <ImageView
-            android:id="@+id/veg_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/veg_logo"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="23dp"
-            android:elevation="2dp"
-            android:layout_marginLeft="62dp"
-            />
-
-        <ImageView
-            android:id="@+id/ownerPhoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/profile_photo_logo"
-            android:elevation="2dp"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="328dp"
-            android:layout_marginBottom="29dp"
-            />
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
-            android:background="@drawable/flat_card_view"
-            android:elevation="1dp"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
-            android:background="@drawable/flat_card_view_2"
-            android:elevation="1dp"
-            android:layout_gravity="bottom"
-            />
-
-        <ViewFlipper
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/image_1"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/image_1"
-                android:scaleType="centerCrop"
-                />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/image_2"
-                android:scaleType="centerCrop"
-                />
+                <TextView
+                    android:id="@+id/AddressLine1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="11dp"
+                    android:layout_marginTop="19dp"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_bold"
+                    android:text="Vasundhara, Ghaziabad"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
+                <TextView
+                    android:id="@+id/AddressLine2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10dp"
+                    android:text="364, Sector 11"
+                    android:textColor="@color/white"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginLeft="11dp"
+                    />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/image_3"
-                android:scaleType="centerCrop"
-                />
+                <TextView
+                    android:id="@+id/rent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="21000/mon"
+                    android:textColor="@color/white"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginLeft="11dp"
+                    />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/image_4"
-                android:scaleType="centerCrop"
-                />
+                <TextView
+                    android:id="@+id/flatSize"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3BHK"
+                    android:textSize="10dp"
+                    android:textColor="@color/white"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_marginTop="53dp"
+                    android:layout_marginLeft="91dp"
+                    />
 
 
-        </ViewFlipper>
+                <TextView
+                    android:id="@+id/occupied"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3/4 occupied"
+                    android:textSize="12dp"
+                    android:textColor="@color/white"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_marginTop="67dp"
+                    android:layout_marginLeft="11dp"
+                    />
+
+                <TextView
+                    android:id="@+id/ownerName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:text="Ayush Agrawal"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_bold"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="63dp"
+                    android:layout_marginLeft="8dp"
+                    />
+
+                <TextView
+                    android:id="@+id/Course"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:text="B.Tech"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="44dp"
+                    android:layout_marginLeft="8dp"
+                    />
+                <TextView
+                    android:id="@+id/year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:text="1st yr"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="44dp"
+                    android:layout_marginLeft="55dp"
+                    />
+
+                <TextView
+                    android:id="@+id/branch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:text="CSE"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="44dp"
+                    android:layout_marginLeft="94dp"
+                    />
+
+                <ImageView
+                    android:id="@+id/smoke_logo"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/smoke_logo"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="23dp"
+                    android:elevation="2dp"
+                    android:layout_marginLeft="8dp"
+                    />
+                <ImageView
+                    android:id="@+id/drink_logo"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/drink_logo"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="23dp"
+                    android:elevation="2dp"
+                    android:layout_marginLeft="26dp"
+                    />
+                <ImageView
+                    android:id="@+id/gym_logo"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/gym_logo"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="23dp"
+                    android:elevation="2dp"
+                    android:layout_marginLeft="44dp"
+                    />
+                <ImageView
+                    android:id="@+id/veg_logo"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/veg_logo"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="23dp"
+                    android:elevation="2dp"
+                    android:layout_marginLeft="62dp"
+                    />
+
+                <ImageView
+                    android:id="@+id/ownerPhoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/profile_photo_logo"
+                    android:elevation="2dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="328dp"
+                    android:layout_marginBottom="29dp"
+                    />
 
 
-    </FrameLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="92dp"
+                    android:background="@drawable/flat_card_view"
+                    android:elevation="1dp"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="92dp"
+                    android:background="@drawable/flat_card_view_2"
+                    android:elevation="1dp"
+                    android:layout_gravity="bottom"
+                    />
+
+                <ViewFlipper
+                    android:id="@+id/view_flipper"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/image_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/image_1"
+                        android:scaleType="centerCrop"
+                        />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/image_2"
+                        android:scaleType="centerCrop"
+                        />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/image_3"
+                        android:scaleType="centerCrop"
+                        />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/image_4"
+                        android:scaleType="centerCrop"
+                        />
+
+
+                </ViewFlipper>
+
+
+            </FrameLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
